tests/ui/codegen/device_string_literal.rx
//@ spec: RXS-0073
kernel fn k() { //~ ERROR RX6003
    let _s = "device string";
}
